# wasm-size-inspector

./: README.md  custom.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.storybook/: main.ts  preview.ts  preview.tsx
src/: App.tsx  index.css  main.tsx  types.ts
src/assets/: hello.wasm  loro.wasm
src/components/ui/: ItemTable.stories.tsx  ItemTable.tsx  TestTable.tsx  dropzone.stories.tsx  dropzone.tsx  filter.tsx  item-table.stories.tsx  item-table.tsx  wasm-file-info.stories.tsx  wasm-file-info.tsx
src/lib/: utils.ts
twiggy-wasm-api/: Cargo.toml
twiggy-wasm-api/pkg/: package.json  twiggy_wasm_api.d.ts  twiggy_wasm_api.js  twiggy_wasm_api_bg.js  twiggy_wasm_api_bg.wasm  twiggy_wasm_api_bg.wasm.d.ts
twiggy-wasm-api/src/: lib.rs
twiggy-wasm-api/tests/: test.rs
