[package]
name = "twiggy-wasm-api"
version = "0.7.0"
authors = []
license = "Apache-2.0/MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[dependencies.twiggy-ir]
git = "https://github.com/zxch3n/twiggy.git"

[dependencies.twiggy-analyze]
git = "https://github.com/zxch3n/twiggy.git"
default-features = false
features = ["emit_json"]

[dependencies.twiggy-opt]
git = "https://github.com/zxch3n/twiggy.git"
default-features = false
features = ["wasm"]

[dependencies.twiggy-parser]
git = "https://github.com/zxch3n/twiggy.git"
default-features = false

[dependencies.twiggy-traits]
git = "https://github.com/zxch3n/twiggy.git"

[dependencies.wasm-bindgen]
version = "0.2.80"

[features]
default = ["emit_json"]
emit_json = ["twiggy-traits/emit_json"]
